tests/test_assets/semantic/invalid/expressions/floating_ieee754_oracles.expected
semantic error at line 26: duplicate switch case
semantic error at line 34: duplicate switch case
semantic error at line 42: duplicate switch case
semantic error at line 50: duplicate switch case
semantic error at line 58: duplicate switch case
semantic error at line 66: duplicate switch case
6 semantic errors generated.
